# llm-cli

./: CLAUDE.md  CODEBASE.md  TODO.md  pyproject.toml  requirements.txt
context/: mcp.txt
llm_cli/: main.py  utils.py
llm_cli/chat/: chat.py
llm_cli/mcp/: mcp_client.py
llm_cli/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  openai.py  prompts.py
llm_cli/utils/: io_utils.py
test_small_codebase/: main.py
