[tool.poetry]
name = "llm_cli"
version = "0.1.0"
description = "CLI tool for LLM interactions"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
rich = "^13.7.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
llm = "llm_cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
